--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     </style>
 </head>
 <body>
-   <iframe src="C:\Users\nowsh\Documents\Desktop\NowshadBasha_Resume.pdf" width="100%" height="800px"></iframe>
+   <iframe src="https://nowshad13.github.io/NowshadBasha_Resume.pdf" width="100%" height="800px"></iframe>
 </body>
 </html>
